; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/ulp/sdp/extr_sdp_tx.c_sdp_poll_tx.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/ulp/sdp/extr_sdp_tx.c_sdp_poll_tx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdp_sock = type { i64, %struct.TYPE_5__, %struct.socket* }
%struct.TYPE_5__ = type { %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { i64 }
%struct.socket = type { i32 }

@.str = private unnamed_addr constant [41 x i8] c"TX timeout: inflight=%d, head=%d tail=%d\00", align 1
@TCPS_CLOSED = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [18 x i8] c"Socket is closed\0A\00", align 1
@tx_poll_miss = common dso_local global i32 0, align 4
@tx_poll_hit = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [38 x i8] c"finished tx processing. inflight = %d\00", align 1
@SDP_TX_POLL_TIMEOUT = common dso_local global i32 0, align 4
@sdp_poll_tx_timeout = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sdp_sock*)* @sdp_poll_tx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sdp_poll_tx(%struct.sdp_sock* %0) #0 {
  %2 = alloca %struct.sdp_sock*, align 8
  %3 = alloca %struct.socket*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.sdp_sock* %0, %struct.sdp_sock** %2, align 8
  %6 = load %struct.sdp_sock*, %struct.sdp_sock** %2, align 8
  %7 = getelementptr inbounds %struct.sdp_sock, %struct.sdp_sock* %6, i32 0, i32 2
  %8 = load %struct.socket*, %struct.socket** %7, align 8
  store %struct.socket* %8, %struct.socket** %3, align 8
  %9 = load %struct.sdp_sock*, %struct.sdp_sock** %2, align 8
  %10 = getelementptr inbounds %struct.sdp_sock, %struct.sdp_sock* %9, i32 0, i32 2
  %11 = load %struct.socket*, %struct.socket** %10, align 8
  %12 = load %struct.sdp_sock*, %struct.sdp_sock** %2, align 8
  %13 = call i64 @tx_ring_posted(%struct.sdp_sock* %12)
  %14 = load %struct.sdp_sock*, %struct.sdp_sock** %2, align 8
  %15 = getelementptr inbounds %struct.sdp_sock, %struct.sdp_sock* %14, i32 0, i32 1
  %16 = bitcast %struct.TYPE_5__* %15 to { %struct.TYPE_4__*, i32 }*
  %17 = getelementptr inbounds { %struct.TYPE_4__*, i32 }, { %struct.TYPE_4__*, i32 }* %16, i32 0, i32 0
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %19 = getelementptr inbounds { %struct.TYPE_4__*, i32 }, { %struct.TYPE_4__*, i32 }* %16, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @ring_head(%struct.TYPE_4__* %18, i32 %20)
  %22 = load %struct.sdp_sock*, %struct.sdp_sock** %2, align 8
  %23 = getelementptr inbounds %struct.sdp_sock, %struct.sdp_sock* %22, i32 0, i32 1
  %24 = bitcast %struct.TYPE_5__* %23 to { %struct.TYPE_4__*, i32 }*
  %25 = getelementptr inbounds { %struct.TYPE_4__*, i32 }, { %struct.TYPE_4__*, i32 }* %24, i32 0, i32 0
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %25, align 8
  %27 = getelementptr inbounds { %struct.TYPE_4__*, i32 }, { %struct.TYPE_4__*, i32 }* %24, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = call i32 @ring_tail(%struct.TYPE_4__* %26, i32 %28)
  %30 = call i32 (%struct.socket*, i32*, i8*, ...) @sdp_prf1(%struct.socket* %11, i32* null, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i64 %13, i32 %21, i32 %29)
  %31 = load %struct.sdp_sock*, %struct.sdp_sock** %2, align 8
  %32 = getelementptr inbounds %struct.sdp_sock, %struct.sdp_sock* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* @TCPS_CLOSED, align 8
  %35 = icmp eq i64 %33, %34
  %36 = zext i1 %35 to i32
  %37 = call i64 @unlikely(i32 %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %42

39:                                               ; preds = %1
  %40 = load %struct.socket*, %struct.socket** %3, align 8
  %41 = call i32 @sdp_warn(%struct.socket* %40, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  br label %72

42:                                               ; preds = %1
  %43 = load %struct.sdp_sock*, %struct.sdp_sock** %2, align 8
  %44 = call i64 @sdp_process_tx_cq(%struct.sdp_sock* %43)
  store i64 %44, i64* %5, align 8
  %45 = load i64, i64* %5, align 8
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %50, label %47

47:                                               ; preds = %42
  %48 = load i32, i32* @tx_poll_miss, align 4
  %49 = call i32 @SDPSTATS_COUNTER_INC(i32 %48)
  br label %53

50:                                               ; preds = %42
  %51 = load i32, i32* @tx_poll_hit, align 4
  %52 = call i32 @SDPSTATS_COUNTER_INC(i32 %51)
  br label %53

53:                                               ; preds = %50, %47
  %54 = load %struct.sdp_sock*, %struct.sdp_sock** %2, align 8
  %55 = call i64 @tx_ring_posted(%struct.sdp_sock* %54)
  store i64 %55, i64* %4, align 8
  %56 = load %struct.sdp_sock*, %struct.sdp_sock** %2, align 8
  %57 = getelementptr inbounds %struct.sdp_sock, %struct.sdp_sock* %56, i32 0, i32 2
  %58 = load %struct.socket*, %struct.socket** %57, align 8
  %59 = load i64, i64* %4, align 8
  %60 = call i32 (%struct.socket*, i32*, i8*, ...) @sdp_prf1(%struct.socket* %58, i32* null, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.2, i64 0, i64 0), i64 %59)
  %61 = load i64, i64* %4, align 8
  %62 = icmp ne i64 %61, 0
  br i1 %62, label %63, label %71

63:                                               ; preds = %53
  %64 = load %struct.sdp_sock*, %struct.sdp_sock** %2, align 8
  %65 = getelementptr inbounds %struct.sdp_sock, %struct.sdp_sock* %64, i32 0, i32 1
  %66 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %65, i32 0, i32 1
  %67 = load i32, i32* @SDP_TX_POLL_TIMEOUT, align 4
  %68 = load i32, i32* @sdp_poll_tx_timeout, align 4
  %69 = load %struct.sdp_sock*, %struct.sdp_sock** %2, align 8
  %70 = call i32 @callout_reset(i32* %66, i32 %67, i32 %68, %struct.sdp_sock* %69)
  br label %71

71:                                               ; preds = %63, %53
  br label %72

72:                                               ; preds = %71, %39
  ret void
}

declare dso_local i32 @sdp_prf1(%struct.socket*, i32*, i8*, ...) #1

declare dso_local i64 @tx_ring_posted(%struct.sdp_sock*) #1

declare dso_local i32 @ring_head(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @ring_tail(%struct.TYPE_4__*, i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @sdp_warn(%struct.socket*, i8*) #1

declare dso_local i64 @sdp_process_tx_cq(%struct.sdp_sock*) #1

declare dso_local i32 @SDPSTATS_COUNTER_INC(i32) #1

declare dso_local i32 @callout_reset(i32*, i32, i32, %struct.sdp_sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
